--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -37,8 +37,10 @@ jobs:
           cache: 'npm'
       - name: Install dependencies
         run: npm install
+        working-directory: KanjiFlashcards/
       - name: Build
         run: npm run build
+        working-directory: KanjiFlashcards/
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Upload artifact
