--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -35,20 +35,17 @@ jobs:
         with:
           node-version: 18
           cache: 'npm'
-          cache-dependency-path: KanjiFlashcards/package-lock.json
       - name: Install dependencies
         run: npm install
-        working-directory: KanjiFlashcards/
       - name: Build
         run: npm run build
-        working-directory: KanjiFlashcards/
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
           # Upload dist repository
-          path: './KanjiFlashcards/dist'
+          path: './dist'
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
